syntax = "proto3";

package proto.data;

message DepartmentProto {
  string department_name = 1;
}